# DAQ-Technical-Assessment

./: README.md  brainstorming.md  package-lock.json  package.json
.github/workflows/: CI.yml  ci.yml
battery-ui/: .eslintrc.json  .prettierrc.json  Dockerfile  package-lock.json  package.json
battery-ui/src/: App.css  App.tsx  Content.tsx  DimensionsProvider.tsx  RedbackLogo.tsx  Temperature.tsx  index.css  index.tsx  live_value.test.tsx  live_value.tsx
cloud/: README.md
cloud-deployments/: README.md
cloud/docs/: README.md  cloud_diagram.drawio
data-emulator/: .gitignore  .prettierrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
data-emulator/src/: battery_emulator.ts
firmware/: CMakeLists.txt  Dockerfile  README.md  SensorBus.dbc  answer.txt  docker-compose.yml
firmware/dbc-files/: ControlBus.dbc  SensorBus.dbc  TractiveBus.dbc
firmware/docs/: README.md
firmware/solution/: CMakeLists.txt  main.cpp
spyder/: package-lock.json  package.json
spyder/data-emulator/: Dockerfile  package-lock.json  package.json
spyder/docs/: README.md
spyder/streaming-service/: package-lock.json  package.json
spyder/ui/: .gitignore  Dockerfile  custom.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
streaming-service/: .eslintrc.json  Dockerfile  jest.config.js  package-lock.json  package.json
streaming-service/src/: interface.d.ts  invalid.test.ts  invalid.ts  server.ts
streaming-service/test/: server.test.ts
telemetry/: README.md  docker-compose.yml
telemetry/docs/: README.md
telemetry/ui/: Dockerfile  (+5 more)
(+18 files in other folders)
